--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,19 @@ body, html {
 #root {
   height: 100%;
 }
+
+h1 {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.page-container {
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  padding: 20px;
+}
